--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16",
+    "save": "^2.5.0",
     "socket.io": "^4.5.0"
   }
 }
