Begin the history feature
Add route /user/history
Add model History
Add page History.jsx

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-DB = mongodb://localhost:27017/db_planning_poker
+
+ADMIN_PASSWORD = YOUR ADMIN PASSWORD
 JWTPRIVATEKEY = hsgdhsyt1787yytdaespo09090dfdfd
 SALT = 10
